runit (0.7.2-1) unstable; urgency=low

  * new upstream version.

 -- Gerrit Pape <pape@smarden.org>  Thu, 16 Jan 2003 10:50:14 +0100

runit (0.7.1-5) unstable; urgency=low

  * debian/3: stop getties after all other services.
  * debian/control: Architecture: any, build dependency sorts out;
    build-depends on dietlibc >> 0.22-0 (available on ia64).
  * debian/rules: use dh_installdocs -n.
  * debian/runit.preinst: remove #DEBHELPER#.

 -- Gerrit Pape <pape@smarden.org>  Thu,  5 Dec 2002 22:17:18 +0100

runit (0.7.1-4) unstable; urgency=low

  * debian/rules: install debian specific stage 3: fix path to service
    directory.
  * debian/3: new.

 -- Gerrit Pape <pape@smarden.org>  Thu,  7 Nov 2002 18:33:52 +0100

runit (0.7.1-3) unstable; urgency=low

  * debian/control: build-depends on dietlibc >= 0.21-3 (fixes build
    failure on mips/mipsel).
  * debian/rules: debian/1: new.

 -- Gerrit Pape <pape@smarden.org>  Sun,  3 Nov 2002 23:20:23 +0100

runit (0.7.1-2) unstable; urgency=low

  * debian/rules: let diet be verbose and mangle gcc options for platform
    specific optimization (fixes build failure on sparc).

 -- Gerrit Pape <pape@smarden.org>  Thu, 24 Oct 2002 22:54:08 +0200

runit (0.7.1-1) unstable; urgency=low

  * new upstream version.

 -- Gerrit Pape <pape@smarden.org>  Wed, 23 Oct 2002 11:46:01 +0200

runit (0.7.0-3) unstable; urgency=low

  * initial official debian package (closes: #164301).
  * debian/runsvstat.8, debian/runsvctrl.8: new.

 -- Gerrit Pape <pape@smarden.org>  Fri, 18 Oct 2002 13:25:33 +0200

runit (0.7.0-2) unstable; urgency=low

  * rework debian packaging to be debian policy compliant.
  * runit: add lintian override: statically-linked-binary; the runit
    programs are knowingly compiled statically with the diet libc.

 -- Gerrit Pape <pape@smarden.org>  Fri, 11 Oct 2002 14:21:25 +0200

runit (0.7.0-1) sarge; urgency=low

  * See /package/admin/runit/package/CHANGES.