@@ -1,3 +1,0 @@
-admin/runit/package/README
-admin/runit/package/THANKS
-admin/runit/doc
